# image_processor

./: BMP.cpp  BMP.h  CMakeLists.txt  Image.cpp  Image.h  Parser.cpp  Parser.h  Pixel.cpp  Pixel.h  image_processor.cpp  readme.md
exceptions/: bmp_exceptions.cpp  bmp_exceptions.h  parser_exceptions.cpp  parser_exceptions.h
filters/: Crop.cpp  Crop.h  Crystallize.cpp  Crystallize.h  EdgeDetection.cpp  EdgeDetection.h  Filter.h  GaussianBlur.cpp  GaussianBlur.h  GrayScale.cpp  GrayScale.h  MatrixFilter.cpp  MatrixFilter.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h
test/: CMakeLists.txt  tests.cpp
